tests/interpreter/binary-expression-greater-bad-types.stderr
error: cannot compare 'Number' with 'String'
 --> $DIR/binary-expression-greater-bad-types.lox:1:1
  |
1 | 10 > "foo";
  | ^^^^^^^^^^
